Add groupBy example